# curmux

./: .curmux.conf  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  commitlint.config.cjs  curmux  install.sh  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml  release.yaml
docs/: curmux-conf-plan.md  example.curmux.conf  kanban-draggable-plan.md  menubar-launcher-plan.md  shell-completion-plan.md
menubar/: curmux_menubar.py
tests/: api-tasks.sh  test_curmux.py
