[project]
name = "curmux"
version = "0.0.0-dev"
description = "Cursor Agent Multiplexer — parallel cursor-agent sessions with watchdog, task board, and web dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Mark Mercado" }]
keywords = ["cursor", "agent", "tmux", "multiplexer", "watchdog"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
layout = ["pyyaml"]
menubar = ["rumps"]
